# Rowan

./: .gitignore  LICENSE  README.md  debug_embeddings.py  docker-compose.override.yaml  docker-compose.prod.yaml  docker-compose.yaml  dockerfile  dockerfile.vectordb  main.py  pyproject.toml  test_llm_response.py
app/: __init__.py
app/llm/: service.py
data/: plants.json
tests/: test_hybrid_search_integration.py
