[project]
name = "rowan"
version = "0.1.0"
description = "AI Agentic Workflow for Gardening"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb==1.5.3",
    "requests>=2.31.0",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
    "tqdm>=4.67.3",
    "transformers>=5.3.0",
    "torch>=2.10.0",
]

[tool.pytest.ini_options]
markers = [
    "integration: integration tests",
]
filterwarnings = [
    "ignore:.*iscoroutinefunction.*:DeprecationWarning:chromadb.telemetry.opentelemetry",
]
